fix palm menu in dark mode

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -93,6 +93,7 @@
     }
 
     .page-link {
+      color: $text-color !important;
       display: block;
       padding: 5px 10px;
 
